<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.patri.appbolaoprojeto.Activity.RecoverPasswordActivity"
    tools:showIn="@layout/activity_recover_password"
    android:orientation="vertical"
    android:layout_marginStart='@dimen/vinte_dp'
    android:layout_marginEnd='@dimen/vinte_dp'>
    <TextView
        android:layout_width= "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/vinte_dp"
        android:text="@string/tvRecSenha"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dez_dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/tvUsuario" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dez_dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/tvEmail" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dez_dp"
        android:orientation="horizontal">
        <Button
            android:layout_width= "120dp"
            android:layout_height= "wrap_content"
            android:text="@string/btEnviar"
            android:layout_marginEnd="30dp"
            android:background="@drawable/botao_customizado_verde"
            android:textColor="@android:color/white"
            android:id="@+id/btEnviar"/>
        <Button
            android:layout_width= "120dp"
            android:layout_height= "wrap_content"
            android:background="@drawable/botao_customizado_vermelho"
            android:textColor="@android:color/white"
            android:text="@string/btCancelar"
            android:id="@+id/btCancelar"/>
    </LinearLayout>

</LinearLayout>
